// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Fragment>
  <withRouter(withAppStateContext(PageTracker)) />
  <Outlet />
  <KeyboardShortcutsModal />
</Fragment>
`;

exports[`should render correctly: with gravatar 1`] = `
<Fragment>
  <withRouter(withAppStateContext(PageTracker))>
    <link
      href="http://example.com"
      rel="preconnect"
    />
  </withRouter(withAppStateContext(PageTracker))>
  <Outlet />
  <KeyboardShortcutsModal />
</Fragment>
`;
